# chess-engine-rs

./: Cargo.toml  README.md
chess-engine/: Cargo.toml
chess-engine/src/: bitboard.rs  game.rs  main.rs
