[package]
name = "chess-engine"
version = "0.1.0"
authors = ["Benjamin <info@benjamin-kuen.com"]
description = "A chess engine written in Rust"
readme = "README.md"
homepage = "https://benjamin-kuen.com"
repository = "https://github.com/bkuen/chess-engine-rs"
keywords = ["chess", "engine", "ai"]
edition = "2018"

[dependencies]
